<resources>
    <string name="app_name">Muffin</string>
    <string name="authentication">Authentication</string>
    <string name="overview">Overview</string>
    <string name="history">History</string>
    <string name="balance_details">Balance Details</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="setup">Setup</string>
    <string name="name">Name</string>
    <string name="monthly_income">Monthly income</string>
    <string name="currency">Currency</string>
    <string name="pin">Pin</string>
    <string name="pin_helper">This pin will be used as session authenticator</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_muffin">Welcome to Muffin!</string>
    <string name="next">Next</string>
    <string name="field_required">This field is required!</string>
    <string name="current_balance">Current balance</string>
    <string name="authenticate">Authenticate</string>
    <string name="incorrect_pin">Pin you entered is incorrect!</string>
    <string name="my_balances">My balances</string>
    <string name="main_balance">Main balance</string>
    <string name="savings_balance">Savings balance</string>
    <string name="edit_balances">Edit balances</string>
    <string name="transactions_overview">Transactions overview</string>
    <string name="add_balance">Add balance</string>
    <string name="show_in_overview">Show in overview</string>
    <string name="delete_balance">Delete balance</string>
    <string name="edit_balance">Edit balance</string>
    <string name="my_transactions">My transactions</string>
    <string name="no_transactions">No transactions</string>
    <string name="topup">Topup</string>
    <string name="track_expense">Track expense</string>
    <string name="track_topup">Track topup</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="topup_date">Topup date</string>
    <string name="select_date">Select date</string>
    <string name="balance">Balance</string>
    <string name="expense_date">Expense date</string>
    <string name="category">Category</string>
</resources>
