<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overview_graph"
    app:startDestination="@id/overviewFragment">

    <fragment
        android:id="@+id/overviewFragment"
        android:name="com.nemscep.muffin.overview.OverviewFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/balanceDetails"
        android:name="com.nemscep.muffin.overview.BalanceDetails"
        android:label="@string/balance_details"
        tools:layout="@layout/fragment_balance_details" />

    <activity
        android:id="@+id/editBalancesActivity"
        android:name="com.nemscep.muffin.balances.ui.EditBalancesActivity"
        android:label="@string/edit_balances"
        tools:layout="@layout/activity_edit_balances" />

</navigation>
