<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/three_grid_unit"
    tools:context=".OnboardingFragment">

    <TextView
        style="@style/TextAppearance.Muffin.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_muffin" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/one_grid_unit" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/one_grid_unit" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/one_grid_unit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSetup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup" />

</LinearLayout>
