<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/three_grid_unit"
    tools:context=".auth.ui.AuthFragment">

    <TextView
        style="?textAppearanceHeadline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/authentication" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:orientation="vertical">

        <TextView
            style="?textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Welcome back Nemanja!" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/one_grid_unit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pin">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/one_grid_unit" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAuthenticate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authenticate" />

</LinearLayout>
